Fixed hamburger color and added stackoverflow link

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ header {
     display: inline-block;
 }
 .mobile__toggle-div {
+    background-color: black;
     height: 3px;
     width: 100%;
     margin: 8px 0;
